# music-manager

./: .gitignore  .run  pyproject.toml  requirements.txt  setup.py
music-entity-parser/: input_files  parser_config
music_manager/: commands_common.py  constants.py  music_manager.py
music_manager/commands/addnewentitiestosheet/: add_new_music_entity_cmd.py  config.py  music_entity_creator.py  parser.py
music_manager/contentprovider/: beatport.py  common.py  facebook.py  mixcloud.py  soundcloud.py  youtube.py
musicmanager/: commands_common.py  common.py  constants.py  music_manager.py  music_manager_config.py  statistics.py  youtube.py
musicmanager/commands/addnewentitiestosheet/: add_new_music_entity_cmd.py  config.py  music_entity_creator.py  parser.py
musicmanager/commands/addnewmixestolisten/: add_new_mixes_to_listen_cmd.py  config.py  parser.py
musicmanager/contentprovider/: beatport.py  common.py  facebook.py  mixcloud.py  soundcloud.py  youtube.py
musicmanager/scripts/: track_selection_find_missing_tracks.py  track_selection_find_missing_tracks_debug.py
musicmanager/services/: services.py
tests/musicmanager/commands/addnewmixestolisten/: test_parser.py
tests/musicmanager/scripts/: test_track_selection_find_missing_tracks.py
throwaway/: fb_test_cookie_extract.py  fb_test_with_browser_cookie3.py  fb_test_with_requests_form_login.py
